// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Select Input/Item selected text only 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > label {
  padding: 0 8px 0 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="c1 itemContainer "
  >
    <div
      className="c2 labelContainer"
    >
      Hello
    </div>
    <span
      className="c3"
      color="currentColor"
      size="1em"
    >
      <svg
        aria-hidden={true}
        className="farmblocks-icon "
        height={24}
        viewBox="2 2 20 20"
        width={24}
      >
        <path
          d="M10.721 14.453l5.49-7.066a1 1 0 011.579 1.226l-6.215 8a1 1 0 01-1.526.064l-2.785-3.03a1 1 0 011.472-1.354l1.985 2.16z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Storyshots Select Input/Item selected with checkbox + image 1`] = `
.c4 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c4 .farmblocks-icon {
  display: block;
}

.c5 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c3 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c3 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  max-width: 16px;
  max-height: 16px;
  border-radius: 4px;
  color: #FFFFFF;
  background-color: #3498db;
  border-color: #3498db;
}

.c3 .visibleCheckbox .checkmark {
  visibility: visible;
}

.c3 .label {
  margin-left: 0;
}

.c3:hover .visibleCheckbox {
  color: #3498db;
  background-color: #ffffff;
  border-color: #3498db;
  border-width: 2px;
}

.c3 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > label {
  padding: 0 8px 0 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  margin: -6px 8px -6px 0;
}

.c6:first-child {
  margin-left: -6px;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="c1 itemContainer "
  >
    <div
      className="c2 labelContainer"
    >
      <label
        checked={true}
        className="c3 checkbox"
        onMouseUp={[Function]}
      >
        <input
          checked={true}
          className="hiddenCheckbox"
          onChange={[Function]}
          type="checkbox"
        />
        <div
          className="centerVisibleCheckbox"
        >
          <div
            className="visibleCheckbox"
          >
            <span
              className="c4"
              color="currentColor"
              size="1em"
            >
              <svg
                aria-hidden={true}
                className="farmblocks-icon checkmark"
                height="100%"
                viewBox="4 4 32 32"
                width="100%"
              >
                <path
                  d="M26.177 12.432a1 1 0 111.646 1.136l-8.977 13a1 1 0 01-1.597.065l-4.023-4.924a1 1 0 111.548-1.266l3.182 3.894 8.221-11.905z"
                  fill="currentColor"
                  fillRule="nonzero"
                />
              </svg>
            </span>
          </div>
        </div>
      </label>
      <img
        alt=""
        className="c5 c6 itemImage"
        height={40}
        size={40}
        src="https://picsum.photos/100?image=0"
        width={40}
      />
      Hello
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Input/Item selected with checkbox 1`] = `
.c4 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c4 .farmblocks-icon {
  display: block;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c3 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c3 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  max-width: 16px;
  max-height: 16px;
  border-radius: 4px;
  color: #FFFFFF;
  background-color: #3498db;
  border-color: #3498db;
}

.c3 .visibleCheckbox .checkmark {
  visibility: visible;
}

.c3 .label {
  margin-left: 0;
}

.c3:hover .visibleCheckbox {
  color: #3498db;
  background-color: #ffffff;
  border-color: #3498db;
  border-width: 2px;
}

.c3 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > label {
  padding: 0 8px 0 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="c1 itemContainer "
  >
    <div
      className="c2 labelContainer"
    >
      <label
        checked={true}
        className="c3 checkbox"
        onMouseUp={[Function]}
      >
        <input
          checked={true}
          className="hiddenCheckbox"
          onChange={[Function]}
          type="checkbox"
        />
        <div
          className="centerVisibleCheckbox"
        >
          <div
            className="visibleCheckbox"
          >
            <span
              className="c4"
              color="currentColor"
              size="1em"
            >
              <svg
                aria-hidden={true}
                className="farmblocks-icon checkmark"
                height="100%"
                viewBox="4 4 32 32"
                width="100%"
              >
                <path
                  d="M26.177 12.432a1 1 0 111.646 1.136l-8.977 13a1 1 0 01-1.597.065l-4.023-4.924a1 1 0 111.548-1.266l3.182 3.894 8.221-11.905z"
                  fill="currentColor"
                  fillRule="nonzero"
                />
              </svg>
            </span>
          </div>
        </div>
      </label>
      Hello
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Input/Item selected with image 1`] = `
.c5 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c5 .farmblocks-icon {
  display: block;
}

.c3 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > label {
  padding: 0 8px 0 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin: -6px 8px -6px 0;
}

.c4:first-child {
  margin-left: -6px;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="c1 itemContainer "
  >
    <div
      className="c2 labelContainer"
    >
      <img
        alt=""
        className="c3 c4 itemImage"
        height={40}
        size={40}
        src="https://picsum.photos/100?image=0"
        width={40}
      />
      Hello
    </div>
    <span
      className="c5"
      color="currentColor"
      size="1em"
    >
      <svg
        aria-hidden={true}
        className="farmblocks-icon "
        height={24}
        viewBox="2 2 20 20"
        width={24}
      >
        <path
          d="M10.721 14.453l5.49-7.066a1 1 0 011.579 1.226l-6.215 8a1 1 0 01-1.526.064l-2.785-3.03a1 1 0 011.472-1.354l1.985 2.16z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Storyshots Select Input/Item text only 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > label {
  padding: 0 8px 0 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="c1 itemContainer "
  >
    <div
      className="c2 labelContainer"
    >
      Hello
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Input/Item with checkbox + image 1`] = `
.c4 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c4 .farmblocks-icon {
  display: block;
}

.c5 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c3 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c3 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  max-width: 16px;
  max-height: 16px;
  border-radius: 4px;
  color: #3498db;
  background-color: #FFFFFF;
  border-color: rgba(0,0,0,0.16);
}

.c3 .visibleCheckbox .checkmark {
  visibility: hidden;
}

.c3 .label {
  margin-left: 0;
}

.c3:hover .visibleCheckbox {
  border-color: #3498db;
  border-width: 2px;
}

.c3 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > label {
  padding: 0 8px 0 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  margin: -6px 8px -6px 0;
}

.c6:first-child {
  margin-left: -6px;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="c1 itemContainer "
  >
    <div
      className="c2 labelContainer"
    >
      <label
        className="c3 checkbox"
        onMouseUp={[Function]}
      >
        <input
          className="hiddenCheckbox"
          onChange={[Function]}
          type="checkbox"
        />
        <div
          className="centerVisibleCheckbox"
        >
          <div
            className="visibleCheckbox"
          >
            <span
              className="c4"
              color="currentColor"
              size="1em"
            >
              <svg
                aria-hidden={true}
                className="farmblocks-icon checkmark"
                height="100%"
                viewBox="4 4 32 32"
                width="100%"
              >
                <path
                  d="M26.177 12.432a1 1 0 111.646 1.136l-8.977 13a1 1 0 01-1.597.065l-4.023-4.924a1 1 0 111.548-1.266l3.182 3.894 8.221-11.905z"
                  fill="currentColor"
                  fillRule="nonzero"
                />
              </svg>
            </span>
          </div>
        </div>
      </label>
      <img
        alt=""
        className="c5 c6 itemImage"
        height={40}
        size={40}
        src="https://picsum.photos/100?image=0"
        width={40}
      />
      Hello
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Input/Item with checkbox 1`] = `
.c4 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c4 .farmblocks-icon {
  display: block;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c3 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c3 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  max-width: 16px;
  max-height: 16px;
  border-radius: 4px;
  color: #3498db;
  background-color: #FFFFFF;
  border-color: rgba(0,0,0,0.16);
}

.c3 .visibleCheckbox .checkmark {
  visibility: hidden;
}

.c3 .label {
  margin-left: 0;
}

.c3:hover .visibleCheckbox {
  border-color: #3498db;
  border-width: 2px;
}

.c3 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > label {
  padding: 0 8px 0 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="c1 itemContainer "
  >
    <div
      className="c2 labelContainer"
    >
      <label
        className="c3 checkbox"
        onMouseUp={[Function]}
      >
        <input
          className="hiddenCheckbox"
          onChange={[Function]}
          type="checkbox"
        />
        <div
          className="centerVisibleCheckbox"
        >
          <div
            className="visibleCheckbox"
          >
            <span
              className="c4"
              color="currentColor"
              size="1em"
            >
              <svg
                aria-hidden={true}
                className="farmblocks-icon checkmark"
                height="100%"
                viewBox="4 4 32 32"
                width="100%"
              >
                <path
                  d="M26.177 12.432a1 1 0 111.646 1.136l-8.977 13a1 1 0 01-1.597.065l-4.023-4.924a1 1 0 111.548-1.266l3.182 3.894 8.221-11.905z"
                  fill="currentColor"
                  fillRule="nonzero"
                />
              </svg>
            </span>
          </div>
        </div>
      </label>
      Hello
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Input/Item with image 1`] = `
.c3 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > label {
  padding: 0 8px 0 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin: -6px 8px -6px 0;
}

.c4:first-child {
  margin-left: -6px;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="c1 itemContainer "
  >
    <div
      className="c2 labelContainer"
    >
      <img
        alt=""
        className="c3 c4 itemImage"
        height={40}
        size={40}
        src="https://picsum.photos/100?image=0"
        width={40}
      />
      Hello
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Input/Item withID 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > label {
  padding: 0 8px 0 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="c1 itemContainer "
    id="Select-item-withId"
  >
    <div
      className="c2 labelContainer"
    >
      Hello
    </div>
  </div>
</div>
`;
